task 2. del not work

--- a/warrior.ipynb
+++ b/warrior.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,17 +10,15 @@
     "import random\n",
     "\n",
     "class Warrior:\n",
-    "    def __init__(self, name = 'default_warrior', health = 100):\n",
+    "    def __init__(self, name = 'default_warrior', health = 100, damage = 20):\n",
     "        self.name = name\n",
     "        self.health  = health\n",
-    "        self.damage = 20\n",
+    "        self.damage = damage\n",
     "    \n",
     "    def get_damage(self, damage):\n",
     "        if self.health > 0:\n",
     "            self.health -= damage\n",
     "            print(str(self.name) + \" получил \" + str(damage) + \" урона. У него осталось \" + str(self.health) + \" здоровья.\")\n",
-    "        else:\n",
-    "            return print(str(self.name) + \" уже мертв.\")\n",
     "        if self.health <= 0:\n",
     "            self.health = 0\n",
     "            print(str(self.name) + \" погиб.\")\n",
@@ -30,47 +28,42 @@
     "            return print(str(self.name) + \" не может атаковать в таком состоянии.\")            \n",
     "        print(str(self.name) + \" атакует война по имени \" + str(target.name))\n",
     "        target.get_damage(self.damage)\n",
-    "        if target.health == 0:\n",
-    "            print(\"Воин \" + str(self.name) + \" празднует победу над \" + str(target.name))\n",
-    "            return sys.exit() \n",
+    "        if target.health == 0:      \n",
+    "            print(self.to_string() + \"; празднует победу над \" + str(target.name))\n",
+    "        \n",
+    "    def __del__(self):\n",
+    "        print(\"Valhalla, \" + str(self.name) + \" is coming.\")\n",
+    "        \n",
     "        \n",
     "    def to_string(self):\n",
-    "        return \"Великий воин \" + str(self.name) + \"\\nЗдоровье: \" + str(self.health) + \"\\nУрон: \" + str(self.damage)\n",
+    "        return str(\"Великий воин \" + str(self.name) + \"; Здоровье: \" + str(self.health) + \"; Урон: \" + str(self.damage))\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = Warrior('Abe')\n",
     "b = Warrior('Bjorn')\n",
     "c = Warrior('Sigmair')\n",
-    "#d = Warrior('Uve')\n",
-    "#temp = [a, b, c, d]\n",
     "temp = [a,b,c]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Великий воин Abe\n",
-      "Здоровье: 100\n",
-      "Урон: 20\n",
-      "Великий воин Bjorn\n",
-      "Здоровье: 100\n",
-      "Урон: 20\n",
-      "Великий воин Sigmair\n",
-      "Здоровье: 100\n",
-      "Урон: 20\n"
+      "Великий воин Abe; Здоровье: 100; Урон: 20\n",
+      "Великий воин Bjorn; Здоровье: 100; Урон: 20\n",
+      "Великий воин Sigmair; Здоровье: 100; Урон: 20\n"
      ]
     }
    ],
@@ -81,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 163,
    "metadata": {
     "scrolled": true
    },
@@ -91,56 +84,24 @@
      "output_type": "stream",
      "text": [
       "Sigmair атакует война по имени Abe\n",
-      "Abe получил 20 урона. У него осталось 80 здоровья.\n",
-      "\n",
-      "Abe атакует война по имени Sigmair\n",
-      "Sigmair получил 20 урона. У него осталось 80 здоровья.\n",
-      "\n",
-      "Sigmair атакует война по имени Bjorn\n",
-      "Bjorn получил 20 урона. У него осталось 80 здоровья.\n",
-      "\n",
-      "Bjorn атакует война по имени Sigmair\n",
-      "Sigmair получил 20 урона. У него осталось 60 здоровья.\n",
-      "\n",
-      "Sigmair атакует война по имени Abe\n",
-      "Abe получил 20 урона. У него осталось 60 здоровья.\n",
-      "\n",
-      "Sigmair атакует война по имени Bjorn\n",
-      "Bjorn получил 20 урона. У него осталось 60 здоровья.\n",
-      "\n",
-      "Sigmair атакует война по имени Abe\n",
-      "Abe получил 20 урона. У него осталось 40 здоровья.\n",
-      "\n",
-      "Abe атакует война по имени Bjorn\n",
-      "Bjorn получил 20 урона. У него осталось 40 здоровья.\n",
-      "\n",
-      "Abe атакует война по имени Bjorn\n",
-      "Bjorn получил 20 урона. У него осталось 20 здоровья.\n",
-      "\n",
-      "Bjorn атакует война по имени Abe\n",
       "Abe получил 20 урона. У него осталось 20 здоровья.\n",
       "\n",
-      "Bjorn атакует война по имени Abe\n",
+      "Sigmair атакует война по имени Abe\n",
       "Abe получил 20 урона. У него осталось 0 здоровья.\n",
       "Abe погиб.\n",
-      "Воин Bjorn празднует победу над Abe\n"
+      "Великий воин Sigmair; Здоровье: 80; Урон: 20; празднует победу над Abe\n",
+      "\n"
      ]
     },
     {
-     "ename": "SystemExit",
-     "evalue": "",
+     "ename": "AttributeError",
+     "evalue": "type object 'Warrior' has no attribute 'duel'",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3351: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-163-0fb859238446>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mduel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhealth\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m                 \u001b[0mtemp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mduel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m                 \u001b[1;32mdel\u001b[0m \u001b[0mWarrior\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mduel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: type object 'Warrior' has no attribute 'duel'"
      ]
     }
    ],
@@ -148,15 +109,32 @@
     "while True:\n",
     "    if len(temp) > 1:\n",
     "        duel = random.sample(temp, 2)\n",
-    "        if duel[1].health > 0:\n",
+    "        if duel[1].health > 0 and duel[0].health > 0:\n",
     "            duel[0].attack(duel[1])\n",
     "            print()\n",
-    "        else:\n",
-    "            break\n",
+    "            if duel[1].health == 0:\n",
+    "                temp.remove(duel[1])\n",
+    "                del duel[1]    \n",
+    "    elif len(temp) == 1:\n",
+    "        break\n",
     "    else:\n",
     "        print(\"Недостаточно участников.\")\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
