--- a/warrior.ipynb
+++ b/warrior.ipynb
@@ -42,9 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valhalla, Bjorn is coming.\n"
+     ]
+    }
+   ],
    "source": [
     "a = Warrior('Abe')\n",
     "b = Warrior('Bjorn')\n",
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 167,
    "metadata": {
     "scrolled": true
    },
@@ -83,25 +91,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sigmair атакует война по имени Abe\n",
-      "Abe получил 20 урона. У него осталось 20 здоровья.\n",
+      "Valhalla, Abe is coming.\n",
+      "Valhalla, Sigmair is coming.\n",
+      "Sigmair атакует война по имени Bjorn\n",
+      "Bjorn получил 20 урона. У него осталось 80 здоровья.\n",
       "\n",
-      "Sigmair атакует война по имени Abe\n",
-      "Abe получил 20 урона. У него осталось 0 здоровья.\n",
-      "Abe погиб.\n",
-      "Великий воин Sigmair; Здоровье: 80; Урон: 20; празднует победу над Abe\n",
+      "Abe атакует война по имени Sigmair\n",
+      "Sigmair получил 20 урона. У него осталось 80 здоровья.\n",
+      "\n",
+      "Sigmair атакует война по имени Bjorn\n",
+      "Bjorn получил 20 урона. У него осталось 60 здоровья.\n",
+      "\n",
+      "Sigmair атакует война по имени Bjorn\n",
+      "Bjorn получил 20 урона. У него осталось 40 здоровья.\n",
+      "\n",
+      "Abe атакует война по имени Sigmair\n",
+      "Sigmair получил 20 урона. У него осталось 60 здоровья.\n",
+      "\n",
+      "Abe атакует война по имени Sigmair\n",
+      "Sigmair получил 20 урона. У него осталось 40 здоровья.\n",
+      "\n",
+      "Abe атакует война по имени Bjorn\n",
+      "Bjorn получил 20 урона. У него осталось 20 здоровья.\n",
+      "\n",
+      "Abe атакует война по имени Sigmair\n",
+      "Sigmair получил 20 урона. У него осталось 20 здоровья.\n",
+      "\n",
+      "Abe атакует война по имени Bjorn\n",
+      "Bjorn получил 20 урона. У него осталось 0 здоровья.\n",
+      "Bjorn погиб.\n",
+      "Великий воин Abe; Здоровье: 100; Урон: 20; празднует победу над Bjorn\n",
+      "\n",
+      "Abe атакует война по имени Sigmair\n",
+      "Sigmair получил 20 урона. У него осталось 0 здоровья.\n",
+      "Sigmair погиб.\n",
+      "Великий воин Abe; Здоровье: 100; Урон: 20; празднует победу над Sigmair\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "type object 'Warrior' has no attribute 'duel'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-163-0fb859238446>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mduel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhealth\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m                 \u001b[0mtemp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mduel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m                 \u001b[1;32mdel\u001b[0m \u001b[0mWarrior\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mduel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'Warrior' has no attribute 'duel'"
      ]
     }
    ],
@@ -121,20 +146,6 @@
     "        print(\"Недостаточно участников.\")\n",
     "        break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
