Update fight.py and warrior.py. del not working

--- a/warrior.ipynb
+++ b/warrior.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 170,
    "metadata": {
     "scrolled": true
    },
@@ -92,18 +92,11 @@
      "output_type": "stream",
      "text": [
       "Valhalla, Abe is coming.\n",
-      "Valhalla, Sigmair is coming.\n",
-      "Sigmair атакует война по имени Bjorn\n",
-      "Bjorn получил 20 урона. У него осталось 80 здоровья.\n",
+      "Sigmair атакует война по имени Abe\n",
+      "Abe получил 20 урона. У него осталось 80 здоровья.\n",
       "\n",
       "Abe атакует война по имени Sigmair\n",
       "Sigmair получил 20 урона. У него осталось 80 здоровья.\n",
-      "\n",
-      "Sigmair атакует война по имени Bjorn\n",
-      "Bjorn получил 20 урона. У него осталось 60 здоровья.\n",
-      "\n",
-      "Sigmair атакует война по имени Bjorn\n",
-      "Bjorn получил 20 урона. У него осталось 40 здоровья.\n",
       "\n",
       "Abe атакует война по имени Sigmair\n",
       "Sigmair получил 20 урона. У него осталось 60 здоровья.\n",
@@ -111,21 +104,39 @@
       "Abe атакует война по имени Sigmair\n",
       "Sigmair получил 20 урона. У него осталось 40 здоровья.\n",
       "\n",
+      "Sigmair атакует война по имени Abe\n",
+      "Abe получил 20 урона. У него осталось 60 здоровья.\n",
+      "\n",
       "Abe атакует война по имени Bjorn\n",
+      "Bjorn получил 20 урона. У него осталось 80 здоровья.\n",
+      "\n",
+      "Abe атакует война по имени Bjorn\n",
+      "Bjorn получил 20 урона. У него осталось 60 здоровья.\n",
+      "\n",
+      "Sigmair атакует война по имени Bjorn\n",
+      "Bjorn получил 20 урона. У него осталось 40 здоровья.\n",
+      "\n",
+      "Sigmair атакует война по имени Bjorn\n",
       "Bjorn получил 20 урона. У него осталось 20 здоровья.\n",
       "\n",
       "Abe атакует война по имени Sigmair\n",
       "Sigmair получил 20 урона. У него осталось 20 здоровья.\n",
       "\n",
-      "Abe атакует война по имени Bjorn\n",
-      "Bjorn получил 20 урона. У него осталось 0 здоровья.\n",
-      "Bjorn погиб.\n",
-      "Великий воин Abe; Здоровье: 100; Урон: 20; празднует победу над Bjorn\n",
+      "Bjorn атакует война по имени Abe\n",
+      "Abe получил 20 урона. У него осталось 40 здоровья.\n",
       "\n",
-      "Abe атакует война по имени Sigmair\n",
+      "Bjorn атакует война по имени Sigmair\n",
       "Sigmair получил 20 урона. У него осталось 0 здоровья.\n",
       "Sigmair погиб.\n",
-      "Великий воин Abe; Здоровье: 100; Урон: 20; празднует победу над Sigmair\n",
+      "Великий воин Bjorn; Здоровье: 20; Урон: 20; празднует победу над Sigmair\n",
+      "\n",
+      "Bjorn атакует война по имени Abe\n",
+      "Abe получил 20 урона. У него осталось 20 здоровья.\n",
+      "\n",
+      "Bjorn атакует война по имени Abe\n",
+      "Abe получил 20 урона. У него осталось 0 здоровья.\n",
+      "Abe погиб.\n",
+      "Великий воин Bjorn; Здоровье: 20; Урон: 20; празднует победу над Abe\n",
       "\n"
      ]
     }
@@ -146,6 +157,13 @@
     "        print(\"Недостаточно участников.\")\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
